social links added.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#bio">Bio</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.instagram.com/wrkinsilence/" target="_blank">Instagram</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://open.spotify.com/artist/0DTyvZXoxa0NDmCm1HWtUb?si=LGMWPBnARLO0K0MQRYRpdg" target="_blank">Spotify</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://music.apple.com/us/artist/wrkinsilence/1376911468" target="_blank">Apple Music</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -184,10 +193,10 @@
     </div>
 
   <!-- Contact Section -->
-  <!-- <section class="contact-section bg-black">
+  <section class="contact-section bg-black">
     <div class="container">
 
-      <div class="row">
+      <!-- <div class="row">
 
         <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
@@ -223,22 +232,22 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
+        <a href="https://www.instagram.com/wrkinsilence/" target="_blank" class="mx-2">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="#" class="mx-2">
+        <a href="https://open.spotify.com/artist/0DTyvZXoxa0NDmCm1HWtUb?si=LGMWPBnARLO0K0MQRYRpdg" target="_blank" class="mx-2">
           <i class="fab fa-spotify"></i>
         </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
+        <a href="https://music.apple.com/us/artist/wrkinsilence/1376911468" target="_blank" class="mx-2">
+          <i class="fab fa-apple"></i>
         </a>
       </div>
 
     </div>
-  </section> -->
+  </section>
 
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
