--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <h2 class="text-white mb-4">Biography</h2>
 
           <p class="text-white-50">
-            Based out of Riverside California, WRKINSILENCE is an exciting and enigmatic new force in the Hip Hop/Contemporary R&B/Pop scene. Since 2018, the artist has been singing and songwriting about his personal experience with the various women he has been with, the battle with his inner demons, and his mental health. WRKINSILENCE's fan base consists primarily of teens that enjoy listening to artists such as XXXTentacion, Post Malone, Trippie Redd, Nav, The Weeknd, and Drake. His soothing falsetto vocals resembles Michael Jackson and The Weeknd's vocals, and his deep crooning tone reminds many of Post Malone's.
+            Based out of Riverside California, WRKINSILENCE is an exciting and enigmatic new force in the Hip Hop/Contemporary R&B/Pop scene. He is an unsigned artist. Since 2018, the artist has been singing and songwriting about his personal experience with the various women he has been with, the battle with his inner demons, and his mental health. WRKINSILENCE's fan base consists primarily of teens that enjoy listening to artists such as XXXTentacion, Post Malone, Trippie Redd, Nav, The Weeknd, and Drake. His soothing falsetto vocals resembles Michael Jackson and The Weeknd's vocals, and his deep crooning tone reminds many of Post Malone's.
           </p>
 
           <div class="margin-separator"></div>
