--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             <a class="nav-link js-scroll-trigger" href="#bio">Bio</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="https://www.youtube.com/channel/UCwzlCZrnFe0PrL1fgAtp_jQ" target="_blank">YouTube</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://www.instagram.com/wrkinsilence/" target="_blank">Instagram</a>
           </li>
           <li class="nav-item">
@@ -243,6 +246,9 @@
         </a>
         <a href="https://music.apple.com/us/artist/wrkinsilence/1376911468" target="_blank" class="mx-2">
           <i class="fab fa-apple"></i>
+        </a>
+        <a href="https://www.youtube.com/channel/UCwzlCZrnFe0PrL1fgAtp_jQ" target="_blank" class="mx-2">
+          <i class="fab fa-youtube"></i>
         </a>
       </div>
 
